admin/app-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: njausteve-com-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: njausteve-com
    networking.gke.io/managed-certificates: njausteve-com-certificate
spec:
  backend:
    serviceName: njausteve-com
    servicePort: 80
